# carma-messenger-bridge

./: Dockerfile  README.md
.github/workflows/: ci.yml  dockerhub.yml
.sonarqube/: sonar-scanner.properties
docker/: build-image.sh  install.sh
msger_mosaic_bridge/: CMakeLists.txt  package.xml
msger_mosaic_bridge/include/msger_mosaic_bridge/: conn_manager.hpp  mosaic_adapter.hpp  mosaic_client.hpp  udp_listener.hpp
msger_mosaic_bridge/launch/: mosaic_adapter_launch.py
msger_mosaic_bridge/src/: conn_manager.cpp  main.cpp  mosaic_adapter.cpp  mosaic_client.cpp
msger_mosaic_bridge/test/: test_mosaic_adapter.cpp
