<?xml version="1.0"?>

<!--
  Copyright (C) 2024 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.

 -->
<package format="3">
  <name>msger_mosaic_bridge</name>
  <version>0.0.1</version>
  <description>A ROS2 bridge for communicating with a MOSAIC simulation.</description>

  <maintainer email="CARMA@dot.gov">USDOT</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gps_msgs</depend>  <!-- Declare dependency on gps_msgs -->
  <depend>geometry_msgs</depend>  <!-- Declare dependency on geometry_msgs -->

  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 
</package>
